--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "id": "ms-copilot-theme",
-  "name": "MS Copilot Theme",
+  "id": "ms-copilot-theme-plugin",
+  "name": "MS Copilot Theme Plugin",
   "version": "1.0.0",
   "minAppVersion": "0.15.6",
-  "description": "Helix Warm theme with chat callout outline injection. Bundled as a plugin because outline injection requires JavaScript, which pure CSS themes cannot provide.",
+  "description": "Warm theme with chat callout outline injection. Bundled as a plugin because outline injection requires JavaScript, which pure CSS themes cannot provide.",
   "author": "Kevin",
   "isDesktopOnly": false
 }
