Rename plugin ID and name to remove 'plugin' suffix
- ID: chat-bubble-theme-plugin → chat-bubble-theme
- Name: Chat Bubble Theme Plugin → Chat Bubble Theme
- Fix obsidian-releases review feedback

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "id": "chat-bubble-theme-plugin",
-  "name": "Chat Bubble Theme Plugin",
+  "id": "chat-bubble-theme",
+  "name": "Chat Bubble Theme",
   "version": "1.0.0",
   "minAppVersion": "1.0.0",
   "description": "Warm theme with chat callout outline injection. Bundled as a plugin because outline injection requires JavaScript, which pure CSS themes cannot provide.",
